# webpagewatcher

./: CMakeLists.txt  main.cpp  mwindow.cpp  mwindow.h  mwindowui.ui  previewwidget.ui  selectionwidget.cpp  selectionwidget.h  webview.cpp  webview.h
